# ssr

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  SSR.ipynb  notebook.ipynb
.history/: requirements_20250520192239.txt  requirements_20250520192242.txt  (+3 more)
cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  env.yaml  main.cpp  main.py  setup.py
cpp/bindings/: bindings.cpp
cpp/config/: figure3.yaml
cpp/include/: Random.hpp  ssr.hpp
cpp/notebooks/: notebook.ipynb
cpp/py_scripts/: plot_avalanche_duration_frequencies.py  plot_avalanche_sizes_dist.py  plot_average_avalanche_sizes.py  plot_average_survival_time.py  plot_state_frequencies.py  test_goodness_of_fit.py
cpp/results/figures/figure1/: state_visits_relative_frequency_meta.yml
cpp/results/figures/figure3/: average_size_meta.yml
cpp/results/figures/noisy_ssr/: noisy_ssr_meta.yml
cpp/results/figures/std/: std_ssr_meta.yml
cpp/scripts/: convert_dataset.py  graph.py  plot_feq_of_words.py  run_ssr.sh  script.sh  ssr_book.py  zipf.py
cpp/scripts/data_processing/: convert_dataset.py
cpp/scripts/plotting/: plot_avalanche_sizes_dist.py  plot_average_avalanche_sizes.py  plot_average_survival_time.py  plot_frequency_of_words.py  plot_noisy_ssr.py  plot_state_frequencies.py  test_goodness_of_fit.py
cpp/scripts/py/: plot_avalanche_duration_frequencies.py  plot_avalanche_sizes_dist.py  plot_average_avalanche_sizes.py  plot_average_survival_time.py  plot_noisy_ssr.py  plot_state_frequencies.py  plot_std_ssr.py  test_goodness_of_fit.py
cpp/src/: cascade_ssr.cpp  noisy_ssr.cpp  ssr.cpp  std_ssr.cpp
(+5 files in other folders)
